--- a/src/index.html
+++ b/src/index.html
@@ -1,12 +1,231 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="ru">
 <head>
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Document</title>
 </head>
-<body>
-  Анкета
+<body class="root">
+  <div class="page">
+    <header class="header">
+      <img alt="лого анкеты" class="header__logo" src="<%=require('./images/logo.png')%>">
+      <h1 class="header__title">Я — разработчик</h1>
+    </header>
+    <main class="content">
+
+      <section class="section-resume section-resume_about">
+        <div class="section-resume__description">
+          <h2 class="section-resume__title">Расскажите о себе</h2>
+          <p class="section-resume__description">Поля не являются обязательными, но помимо вашего имени, нам бы хотелось
+            знать из какого вы города, сколько вам лет и как с вами связаться</p>
+        </div>
+        <form class="form section-resume__form">
+            <div class="form__item-wrapper">
+              <input class="form__input" type="text" name="name" id="name" aria-label="Ваше имя" placeholder="Ваше имя">
+              <label class="form__input-label" for="name">Имя</label>
+            </div>
+            <div class="form__item-wrapper">
+              <input class="form__input" type="text" name="date" id="date" aria-label="Ваш год рождения" placeholder="Ваш год рождения">
+              <label class="form__input-label" for="date">Год рождения</label>
+            </div>
+            <div class="form__item-wrapper">
+              <input class="form__input" type="text" name="city" id="city" aria-label="Ваше город" placeholder="Ваше город">
+              <label class="form__input-label" for="city">Город</label>
+            </div>
+            <div class="form__item-wrapper">
+              <input class="form__input" type="text" name="telegram" id="telegram" aria-label="Ваш ник в telegram" placeholder="Ваш ник в telegram">
+              <label class="form__input-label" for="telegram">Телеграм</label>
+            </div>
+            <div class="form__item-wrapper">
+              <input class="form__input" type="email" name="email" id="email" aria-label="Ваш email" placeholder="Ваш email">
+              <label class="form__input-label" for="email">Почта</label>
+            </div>
+        </form>
+      </section>
+
+      <section class="section-resume section-resume_skills">
+        <div class="section-resume__description">
+          <h2 class="section-resume__title">Отметьте ваши навыки</h2>
+          <p class="section-resume__description">Отметьте чекбоксами пункты, которые соответствуют вашим скиллам.
+            Кстати, отсутствие опыта не означает, что у вас меньше шансов стать одним из наших товарищей.
+            Это означает, что вы будете получать те задачи, с которыми гарантировано будете справляться.</p>
+        </div>
+        <form class="form section-resume__form">
+
+            <fieldset class="form__container">
+              <label class="form__label-container" for="bem">БЭМ/OOCSS
+                <input type="checkbox" name="bem" id="bem" checked="checked">
+                <span class="form__checkbox-checkmark"></span>
+              </label>
+              <label class="form__label-container" for="pug">Pug (Jade)
+                <input type="checkbox" name="pug" id="pug">
+                <span class="form__checkbox-checkmark"></span>
+              </label>
+              <label class="form__label-container" for="sass">Stylus/LESS/SASS
+                <input type="checkbox" name="sass" id="sass" checked="checked">
+                <span class="form__checkbox-checkmark"></span>
+              </label>
+              <label class="form__label-container" for="svg">Работаю с SVG
+                <input type="checkbox" name="svg" id="svg" checked="checked">
+                <span class="form__checkbox-checkmark"></span>
+              </label>
+              <label class="form__label-container" for="semantic">Верстаю семантично
+                <input type="checkbox" name="semantic" id="semantic" checked="checked">
+                <span class="form__checkbox-checkmark"></span>
+              </label>
+              <label class="form__label-container" for="accessibility">Accessibility (A11Y)
+                <input type="checkbox" name="accessibility" id="accessibility" checked="checked">
+                <span class="form__checkbox-checkmark"></span>
+              </label>
+              <label class="form__label-container" for="es6es7">ES2015/ES2016
+                <input type="checkbox" name="es6es7" id="es6es7" checked="checked">
+                <span class="form__checkbox-checkmark"></span>
+              </label>
+            </fieldset>
+
+            
+            <fieldset class="form__container">
+              <label class="form__label-container" for="gulp">Gulp/GRUNT
+                <input type="checkbox" name="gulp" id="gulp">
+                <span class="form__checkbox-checkmark"></span>
+              </label>
+              <label class="form__label-container" for="webpack">Webpack
+                <input type="checkbox" name="webpack" id="webpack" checked="checked">
+                <span class="form__checkbox-checkmark"></span>
+              </label>
+              <label class="form__label-container" for="webgl">Дружу с WebGL
+                <input type="checkbox" name="webgl" id="webgl" checked="checked">
+                <span class="form__checkbox-checkmark"></span>
+              </label>
+              <label class="form__label-container" for="jquery">jQuery
+                <input type="checkbox" name="jquery" id="jquery">
+                <span class="form__checkbox-checkmark"></span>
+              </label>
+              <label class="form__label-container" for="angular">Знаю/изучаю Angular
+                <input type="checkbox" name="angular" id="angular">
+                <span class="form__checkbox-checkmark"></span>
+              </label>
+              <label class="form__label-container" for="react">Знаю/изучаю React
+                <input type="checkbox" name="react" id="react" checked="checked">
+                <span class="form__checkbox-checkmark"></span>
+              </label>
+              <label class="form__label-container" for="node">Знаю/изучаю Node.js
+                <input type="checkbox" name="node" id="node" checked="checked">
+                <span class="form__checkbox-checkmark"></span>
+              </label>
+            </fieldset>
+
+            <fieldset class="form__container">
+              <label class="form__label-container" for="git">Использую Git
+                <input type="checkbox" name="git" id="git">
+                <span class="form__checkbox-checkmark"></span>
+              </label>
+              <label class="form__label-container" for="eyes">С глазомером всё ок
+                <input type="checkbox" name="eyes" id="eyes" checked="checked">
+                <span class="form__checkbox-checkmark"></span>
+              </label>
+              <label class="form__label-container" for="lazy">Я ленивый(-ая)
+                <input type="checkbox" name="lazy" id="lazy" checked="checked">
+                <span class="form__checkbox-checkmark"></span>
+              </label>
+              <label class="form__label-container" for="english">У меня хороший английский
+                <input type="checkbox" name="english" id="english">
+                <span class="form__checkbox-checkmark"></span>
+              </label>
+            </fieldset>
+
+        </form>
+      </section>
+
+      <section class="section-resume section-resume__js">
+        <div class="section-resume__description">
+          <h2 class="section-resume__title">Уровень владения Javascript</h2>
+        </div>
+        <form class="form section-resume__form">
+          <ul class="form__slider">
+            <li class="form__slider-item">
+              <label class="form__slider-label" for="noob">Не владею</label>
+              <input class="form__slider-radio" type="radio" id="noob">
+            </li>
+            <li class="form__slider-item">
+              <label class="form__slider-label" for="use">Использую готовые решения</label>
+              <input class="form__slider-radio" type="radio" id="use">
+            </li>
+            <li class="form__slider-item">
+              <label class="form__slider-label" for="edit">Использую готовые решенияи умею их переделывать</label>
+              <input class="form__slider-radio" type="radio" id="edit">
+            </li>
+            <li class="form__slider-item">
+              <label class="form__slider-label" for="master">Пишу сложный JS с нуля</label>
+              <input class="form__slider-radio" type="radio" id="master">
+            </li>
+          </ul>
+        </form>
+      </section>
+
+      <section class="section-resume section-resume__tell">
+        <div class="section-resume__description">
+          <h2 class="section-resume__title">Расскажите о себе словами</h2>
+          <p class="section-resume__description">Напишите пару предложений, чем вас привлекла наша вакансия и чего
+            вы ожидаете от работы в Proektmarketing.
+            Кстати, будет здорово, если при нехватке места для текста строки будут добавляться автоматически.
+          </p>
+        </div>
+        <form class="form section-resume__form">
+          <div class="form__textarea-wrapper"><span class="form__textarea" role="textbox" contenteditable></span></div>
+        </form>
+      </section>
+
+      <section class="section-resume section-resume__future">
+        <div class="section-resume__description">
+          <h2 class="section-resume__title">Какие у вас планы на будущее</h2>
+          <p class="section-resume__description">Этот ответ ни на что не повлияет. Не беда, если в будущем ваши планы поменяются.
+          </p>
+        </div>
+        <form class="form section-resume__form">
+          <div class="form__radio-wrapper">
+            <label class="form__radio" for="layout">
+              <span class="form__radio__input">
+                <input type="radio" name="layout" id="layout">
+                <span class="form__radio-control"></span>
+              </span>
+              <span class="form__radio-label">Верстать</span>
+            </label>
+          </div>
+          <div class="form__radio-wrapper">
+            <label class="form__radio" for="manger">
+              <span class="form__radio__input">
+                <input type="radio" name="manger" id="manger">
+                <span class="form__radio-control"></span>
+              </span>
+              <span class="form__radio-label">Менеджерство</span>
+            </label>
+          </div>
+          <div class="form__radio-wrapper">
+            <label class="form__radio" for="jsmaster">
+              <span class="form__radio__input">
+                <input type="radio" name="jsmaster" id="jsmaster">
+                <span class="form__radio-control"></span>
+              </span>
+              <span class="form__radio-label">Прокачиваться в JS</span>
+            </label>
+          </div>
+          <div class="form__radio-wrapper">
+            <label class="form__radio" for="funny">
+              <span class="form__radio__input">
+                <input type="radio" name="funny" id="funny">
+                <span class="form__radio-control"></span>
+              </span>
+              <span class="form__radio-label">Другое (уйти в калиграфию, быть как Покрас Лампас)</span>
+            </label>
+          </div>
+        </form>
+      </section>
+      <section clas="section-resume">
+        <button type="submit" class="button form__button">Отправить</button>
+      </section>
+    </main>
+  </div>
 </body>
 </html>
