feat: вынести инпут в отдельный блок
создать для стили для инпута
вынести его из блока form

--- a/src/index.html
+++ b/src/index.html
@@ -21,25 +21,25 @@
             знать из какого вы города, сколько вам лет и как с вами связаться</p>
         </div>
         <form class="form section-resume__form">
-            <div class="form__item-wrapper">
-              <input class="form__input" type="text" name="name" id="name" aria-label="Ваше имя" placeholder="Ваше имя">
-              <label class="form__input-label" for="name">Имя</label>
+            <div class="form__item-wrapper input">
+              <input class="input__field" type="text" name="name" id="name" aria-label="Ваше имя" placeholder="Ваше имя">
+              <label class="input__label" for="name">Имя</label>
             </div>
-            <div class="form__item-wrapper">
-              <input class="form__input" type="text" name="date" id="date" aria-label="Ваш год рождения" placeholder="Ваш год рождения">
-              <label class="form__input-label" for="date">Год рождения</label>
+            <div class="form__item-wrapper input">
+              <input class="input__field" type="text" name="date" id="date" aria-label="Ваш год рождения" placeholder="Ваш год рождения">
+              <label class="input__label" for="date">Год рождения</label>
             </div>
-            <div class="form__item-wrapper">
-              <input class="form__input" type="text" name="city" id="city" aria-label="Ваше город" placeholder="Ваше город">
-              <label class="form__input-label" for="city">Город</label>
+            <div class="form__item-wrapper input">
+              <input class="input__field" type="text" name="city" id="city" aria-label="Ваше город" placeholder="Ваше город">
+              <label class="input__label" for="city">Город</label>
             </div>
-            <div class="form__item-wrapper">
-              <input class="form__input" type="text" name="telegram" id="telegram" aria-label="Ваш ник в telegram" placeholder="Ваш ник в telegram">
-              <label class="form__input-label" for="telegram">Телеграм</label>
+            <div class="form__item-wrapper input">
+              <input class="input__field" type="text" name="telegram" id="telegram" aria-label="Ваш ник в telegram" placeholder="Ваш ник в telegram">
+              <label class="input__label" for="telegram">Телеграм</label>
             </div>
-            <div class="form__item-wrapper">
-              <input class="form__input" type="email" name="email" id="email" aria-label="Ваш email" placeholder="Ваш email">
-              <label class="form__input-label" for="email">Почта</label>
+            <div class="form__item-wrapper input">
+              <input class="input__field" type="email" name="email" id="email" aria-label="Ваш email" placeholder="Ваш email">
+              <label class="input__label" for="email">Почта</label>
             </div>
         </form>
       </section>
