fix: ипсравить элементы блока section-resume
исправить префиксы элементов секции на модификатор

--- a/src/index.html
+++ b/src/index.html
@@ -403,7 +403,7 @@
           </form>
         </section>
 
-        <section class="section-resume section-resume__tell">
+        <section class="section-resume section-resume_tell">
           <div class="section-resume__description">
             <h2 class="section-resume__title">Расскажите о себе словами</h2>
             <p class="section-resume__description">
@@ -424,7 +424,7 @@
           </form>
         </section>
 
-        <section class="section-resume section-resume__future">
+        <section class="section-resume section-resume_future">
           <div class="section-resume__description">
             <h2 class="section-resume__title">Какие у вас планы на будущее</h2>
             <p class="section-resume__description">
