--- a/src/index.html
+++ b/src/index.html
@@ -331,7 +331,7 @@
           <div class="section-resume__description">
             <h2 class="section-resume__title">Уровень владения Javascript</h2>
           </div>
-          <form class="form form_slider slider">
+          <form class="form form_slider slider section-resume__form">
             <ul class="slider__list">
               <li class="slider__item">
                 <input
@@ -342,11 +342,6 @@
                 />
                 <span class="slider__span"></span>
               </li>
-
-              <!-- <input name="test3" type="radio" /><span
-                class="slider__span"
-              ></span> -->
-
               <li class="slider__devide"></li>
               <li class="slider__item">
                 <input
@@ -413,10 +408,10 @@
               автоматически.
             </p>
           </div>
-          <form class="form section-resume__form">
-            <div class="form__textarea-wrapper">
+          <form class="form form_textarea section-resume__form">
+            <div class="form__textarea-wrapper textaria">
               <span
-                class="form__textarea"
+                class="textarea__field"
                 role="textbox"
                 contenteditable
               ></span>
