feat: создать блок radio
написать стили для блока radio

--- a/src/index.html
+++ b/src/index.html
@@ -374,7 +374,6 @@
                 <span class="slider__span"></span>
               </li>
             </ul>
-
             <ul class="slider__list slider__list_label">
               <li class="slider__item">
                 <label class="slider__label" for="noob">Не владею</label>
@@ -427,41 +426,62 @@
               планы поменяются.
             </p>
           </div>
-          <form class="form section-resume__form">
+          <form class="form form_radio section-resume__form">
             <div class="form__radio-wrapper">
-              <label class="form__radio" for="layout">
-                <span class="form__radio__input">
-                  <input type="radio" name="layout" id="layout" />
-                  <span class="form__radio-control"></span>
+              <label class="radio radio-before" for="layout">
+                <span class="radio__check">
+                  <input
+                    class="radio__input"
+                    type="radio"
+                    name="future"
+                    id="layout"
+                  />
+                  <span class="radio__control"></span>
                 </span>
-                <span class="form__radio-label">Верстать</span>
+                <span class="radio__label">Верстать</span>
               </label>
             </div>
             <div class="form__radio-wrapper">
-              <label class="form__radio" for="manger">
-                <span class="form__radio__input">
-                  <input type="radio" name="manger" id="manger" />
-                  <span class="form__radio-control"></span>
+              <label class="radio radio-before" for="manger">
+                <span class="radio__check">
+                  <input
+                    class="radio__input"
+                    type="radio"
+                    name="future"
+                    id="manger"
+                  />
+                  <span class="radio__control"></span>
                 </span>
-                <span class="form__radio-label">Менеджерство</span>
+                <span class="radio__label">Менеджерство</span>
               </label>
             </div>
             <div class="form__radio-wrapper">
-              <label class="form__radio" for="jsmaster">
-                <span class="form__radio__input">
-                  <input type="radio" name="jsmaster" id="jsmaster" />
-                  <span class="form__radio-control"></span>
+              <label class="radio radio-before" for="jsmaster">
+                <span class="radio__check">
+                  <input
+                    class="radio__input"
+                    type="radio"
+                    checked
+                    name="future"
+                    id="jsmaster"
+                  />
+                  <span class="radio__control"></span>
                 </span>
-                <span class="form__radio-label">Прокачиваться в JS</span>
+                <span class="radio__label">Прокачиваться в JS</span>
               </label>
             </div>
             <div class="form__radio-wrapper">
-              <label class="form__radio" for="funny">
-                <span class="form__radio__input">
-                  <input type="radio" name="funny" id="funny" />
-                  <span class="form__radio-control"></span>
+              <label class="radio radio-before" for="funny">
+                <span class="radio__check">
+                  <input
+                    class="radio__input"
+                    type="radio"
+                    name="future"
+                    id="funny"
+                  />
+                  <span class="radio__control"></span>
                 </span>
-                <span class="form__radio-label"
+                <span class="radio__label"
                   >Другое (уйти в калиграфию, быть как Покрас Лампас)</span
                 >
               </label>
