feat: создать блок button
написать стили для button
настроить стилизацию в form__button

--- a/src/index.html
+++ b/src/index.html
@@ -488,7 +488,7 @@
             </div>
           </form>
         </section>
-        <section clas="section-resume">
+        <section class="section-resume">
           <button type="submit" class="button form__button">Отправить</button>
         </section>
       </main>
