--- a/src/index.html
+++ b/src/index.html
@@ -35,10 +35,11 @@
                 type="text"
                 name="hobby"
                 id="hobby"
-                aria-label="Ваш hobby"
-                placeholder="Ваш hobby"
+                aria-label="Ваше хобби"
+                placeholder="Ваше хобби"
+                value="авиация, еда, путешествия, архитектура"
               />
-              <label class="input__label" for="hobby">hobby</label>
+              <label class="input__label" for="hobby">Хобби</label>
             </div>
 
             <div class="form__item-wrapper photo hidden">
@@ -57,6 +58,7 @@
                 id="name"
                 aria-label="Ваше имя"
                 placeholder="Ваше имя"
+                value="Юрий Байрамуков"
               />
               <label class="input__label" for="name">Имя</label>
             </div>
@@ -68,6 +70,7 @@
                 id="date"
                 aria-label="Ваш год рождения"
                 placeholder="Ваш год рождения"
+                value="1989"
               />
               <label class="input__label" for="date">Год рождения</label>
             </div>
@@ -79,6 +82,7 @@
                 id="city"
                 aria-label="Ваше город"
                 placeholder="Ваше город"
+                value="Красноярск"
               />
               <label class="input__label" for="city">Город</label>
             </div>
@@ -90,6 +94,7 @@
                 id="telegram"
                 aria-label="Ваш ник в telegram"
                 placeholder="Ваш ник в telegram"
+                value="@comediant24"
               />
               <label class="input__label" for="telegram">Телеграм</label>
             </div>
@@ -101,6 +106,7 @@
                 id="email"
                 aria-label="Ваш email"
                 placeholder="Ваш email"
+                value="bairamykov@gmail.com"
               />
               <label class="input__label" for="email">Почта</label>
             </div>
@@ -432,11 +438,21 @@
           </div>
           <form class="form form_textarea section-resume__form">
             <div class="form__textarea-wrapper textaria">
-              <span
-                class="textarea__field"
-                role="textbox"
-                contenteditable
-              ></span>
+              <span class="textarea__field" role="textbox" contenteditable
+                >Как то я обратил внимание на красивую айдентику к 400 летию
+                Енисейска. В то время меня интересовал моушен дизайн и около
+                того. Начал искать, кто мог это сделать - нашел вас! И удивился
+                от такого количества качественных проектов от красноярской
+                команды! С тех пор я периодически захожу посмотреть на "вас" в
+                сетях и на бехансе.
+                <div>
+                  И я был рад узнать, что у вас есть еще команда веб разработки!
+                  С этой командой я бы хотел прокачаться в JS на боевых
+                  проектах, учавстовать во внедрении новых технологий, получать
+                  обратную связь по коду и наставничество, приносить пользу и
+                  быть частью команды! сетях и на бехансе.
+                </div>
+              </span>
             </div>
           </form>
         </section>
