feat: добавить пакет gh-pages
добавить пакет для деплоя в gh-pages
исправить разметку в textarea

--- a/src/index.html
+++ b/src/index.html
@@ -445,13 +445,13 @@
                 от такого количества качественных проектов от красноярской
                 команды! С тех пор я периодически захожу посмотреть на "вас" в
                 сетях и на бехансе.
-                <div>
+                <p>
                   И я был рад узнать, что у вас есть еще команда веб разработки!
                   С этой командой я бы хотел прокачаться в JS на боевых
-                  проектах, учавстовать во внедрении новых технологий, получать
+                  проектах, участвовать во внедрении новых технологий, получать
                   обратную связь по коду и наставничество, приносить пользу и
-                  быть частью команды! сетях и на бехансе.
-                </div>
+                  быть частью команды! сетях и на бехансе. сетях и на бехансе.
+                </p>
               </span>
             </div>
           </form>
