--- a/index.html
+++ b/index.html
@@ -5,8 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Анкета</title>
-    <script defer src="bundle.js"></script>
-  </head>
+  <script defer src="bundle.js"></script></head>
   <body class="root">
     <div class="page">
       <header class="header">
@@ -38,7 +37,6 @@
                 id="hobby"
                 aria-label="Ваше хобби"
                 placeholder="Ваше хобби"
-                value="авиация, еда, путешествия, архитектура"
               />
               <label class="input__label" for="hobby">Хобби</label>
             </div>
@@ -59,7 +57,6 @@
                 id="name"
                 aria-label="Ваше имя"
                 placeholder="Ваше имя"
-                value="Юрий Байрамуков"
               />
               <label class="input__label" for="name">Имя</label>
             </div>
@@ -71,7 +68,6 @@
                 id="date"
                 aria-label="Ваш год рождения"
                 placeholder="Ваш год рождения"
-                value="1989"
               />
               <label class="input__label" for="date">Год рождения</label>
             </div>
@@ -83,7 +79,6 @@
                 id="city"
                 aria-label="Ваше город"
                 placeholder="Ваше город"
-                value="Красноярск"
               />
               <label class="input__label" for="city">Город</label>
             </div>
@@ -95,7 +90,6 @@
                 id="telegram"
                 aria-label="Ваш ник в telegram"
                 placeholder="Ваш ник в telegram"
-                value="@comediant24"
               />
               <label class="input__label" for="telegram">Телеграм</label>
             </div>
@@ -107,7 +101,6 @@
                 id="email"
                 aria-label="Ваш email"
                 placeholder="Ваш email"
-                value="bairamykov@gmail.com"
               />
               <label class="input__label" for="email">Почта</label>
             </div>
@@ -439,17 +432,7 @@
           </div>
           <form class="form form_textarea section-resume__form">
             <div class="form__textarea-wrapper textaria">
-              <span class="textarea__field" role="textbox" contenteditable
-                >Как то я обратил внимание на красивую айдентику к 400 летию
-                Енисейска. В то время меня интересовал моушен дизайн и около
-                того. Начал искать, кто мог это сделать - нашел вас! И удивился
-                от такого количества качественных проектов от красноярской
-                команды! С тех пор я периодически захожу посмотреть на "вас" в
-                сетях и на бехансе. И я был рад узнать, что у вас есть еще
-                команда веб разработки! С этой командой я бы хотел прокачаться в
-                JS на боевых проектах, учавстовать во внедрении новых
-                технологий, получать обратную связь по коду и наставничество,
-                приносить пользу и быть частью команды! сетях и на бехансе.
+              <span class="textarea__field" role="textbox" contenteditable>
               </span>
             </div>
           </form>
