feat: обновить value в полях
установить placeholder на фото анкеты
обновить value в input

--- a/src/index.html
+++ b/src/index.html
@@ -37,7 +37,6 @@
                 id="hobby"
                 aria-label="Ваше хобби"
                 placeholder="Ваше хобби"
-                value="авиация, еда, путешествия, архитектура"
               />
               <label class="input__label" for="hobby">Хобби</label>
             </div>
@@ -46,7 +45,7 @@
               <img
                 class="form__image photo__img"
                 alt="фото кандидата"
-                src="<%=require('./images/603534967.png')%>"
+                src="<%=require('./images/placeholder-user.png')%>"
               />
             </div>
 
@@ -58,7 +57,6 @@
                 id="name"
                 aria-label="Ваше имя"
                 placeholder="Ваше имя"
-                value="Юрий Байрамуков"
               />
               <label class="input__label" for="name">Имя</label>
             </div>
@@ -70,7 +68,6 @@
                 id="date"
                 aria-label="Ваш год рождения"
                 placeholder="Ваш год рождения"
-                value="1989"
               />
               <label class="input__label" for="date">Год рождения</label>
             </div>
@@ -82,7 +79,6 @@
                 id="city"
                 aria-label="Ваше город"
                 placeholder="Ваше город"
-                value="Красноярск"
               />
               <label class="input__label" for="city">Город</label>
             </div>
@@ -94,7 +90,6 @@
                 id="telegram"
                 aria-label="Ваш ник в telegram"
                 placeholder="Ваш ник в telegram"
-                value="@comediant24"
               />
               <label class="input__label" for="telegram">Телеграм</label>
             </div>
@@ -106,7 +101,6 @@
                 id="email"
                 aria-label="Ваш email"
                 placeholder="Ваш email"
-                value="bairamykov@gmail.com"
               />
               <label class="input__label" for="email">Почта</label>
             </div>
@@ -438,20 +432,7 @@
           </div>
           <form class="form form_textarea section-resume__form">
             <div class="form__textarea-wrapper textaria">
-              <span class="textarea__field" role="textbox" contenteditable
-                >Как то я обратил внимание на красивую айдентику к 400 летию
-                Енисейска. В то время меня интересовал моушен дизайн и около
-                того. Начал искать, кто мог это сделать - нашел вас! И удивился
-                от такого количества качественных проектов от красноярской
-                команды! С тех пор я периодически захожу посмотреть на "вас" в
-                сетях и на бехансе.
-                <p>
-                  И я был рад узнать, что у вас есть еще команда веб разработки!
-                  С этой командой я бы хотел прокачаться в JS на боевых
-                  проектах, участвовать во внедрении новых технологий, получать
-                  обратную связь по коду и наставничество, приносить пользу и
-                  быть частью команды! сетях и на бехансе. сетях и на бехансе.
-                </p>
+              <span class="textarea__field" role="textbox" contenteditable>
               </span>
             </div>
           </form>
